tests/errors/lib-unix-cron-nesting.o_0
cron_lib : From lib:unix/cron

complex : cron_lib.schedule {
	minute : list {
		of : [
			3,
			list {
				of : [ 4, 5 ]
			}
		]
	}
}

value : complex.cron_value Is Str
